--- a/style.css
+++ b/style.css
@@ -5,13 +5,6 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    color: #333;
-    background: linear-gradient(135deg, #4e54c8, #8f94fb);
-    background-size: 400% 400%; /* Makes the gradient scrollable */
-    animation: gradientAnimation 15s ease infinite; /* Infinite background scroll */
-}
 
 /* Animation for the endless background effect */
 @keyframes gradientAnimation {
@@ -21,62 +14,29 @@ body {
 }
 
 /* Header and navigation */
-header {
-    padding: 20px;
-    text-align: center;
-}
 
-header h1 {
-    color: white;
-    margin-bottom: 20px;
-}
 
-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 0;
-}
 
-nav ul li {
-    margin: 10px;
-}
 
-nav ul li a img {
-    width: 180px;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 8px;
-    transition: transform 0.3s ease;
-}
 
-nav ul li a img:hover {
-    transform: scale(1.1);
-}
 
 /* Hide all sections by default */
 .hidden {
     display: none;
 }
+.borderColor {
+    border: 1px solid #000;
+    background-color: rgb(238, 205, 238);
+    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20231231/pngtree-abstract-background-with-watercolor-texture-in-shades-of-blue-and-orange-image_13899501.png");
 
+}
 /* Section and Video Containers */
-main {
-    padding: 100px;
-}
-h1 { 
-    margin: 10px;
-    text-align: center;
-    font-size: 48px;
-    font-weight: bold;
-    background: linear-gradient(45deg, #f3ec78, #af4261);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+
+
 
 section {
     margin-bottom: 40px;
-    background-color: rgba(255, 255, 255, 0.9);
+    /* background-color: rgb(255, 250, 250); */
     padding: 20px;
     border-radius: 8px;
 }
@@ -94,20 +54,8 @@ h3 {
 }
 
 /* Toggle button */
-button.toggle-btn {
-    background-color: #8f94fb;
-    color: white;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-left: 10px;
-    font-size: 14px;
-}
 
-button.toggle-btn:hover {
-    background-color: #4e54c8;
-}
+
 
 /* Video layout */
 .video-container {
@@ -117,9 +65,10 @@ button.toggle-btn:hover {
 }
 
 iframe {
+    border-radius: 5px;
     width: 100%;
     height: 200px;
-    border: none;
+    border:#ffffff;
 }
 
 @media (min-width: 768px) {
@@ -144,11 +93,7 @@ iframe {
     overflow: hidden;
 }
 
-#bg-video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
 
 .category-link{
     text-decoration: none;
